--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = "mongodb+srv://amin:1234@cluster0.zbthihp.mongodb.net/coloc"
+MONGODB_URL = "mongodb+srv://mejribaha395:Baha14417667@cluster0.a5ihfht.mongodb.net/"
 PORT = 5000
-ACCESS_TOKEN_SECRET ="amine123456"
-REFRESH_TOKEN_SECRET ="amine123456"
+ACCESS_TOKEN_SECRET ="baha123456"
+REFRESH_TOKEN_SECRET ="baha123456"
