--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = "mongodb+srv://mejribaha395:Baha14417667@cluster0.a5ihfht.mongodb.net/"
+MONGODB_URL = "mongodb+srv://RiadhKtr:TyY9BXXExgWNBAun@cluster1.hbozg.mongodb.net/mern-app?retryWrites=true&w=majority"
 PORT = 5000
 ACCESS_TOKEN_SECRET ="baha123456"
 REFRESH_TOKEN_SECRET ="baha123456"
